fix collapse About/details / update responsive

--- a/src/components/carrousel/carrousel.css
+++ b/src/components/carrousel/carrousel.css
@@ -1,31 +1,33 @@
-/* .carrousel {
-    height: 415px;
-} */
+.carrousel {
+    width: 100%;
+}
 
-.slide img {
-    width: 1240px;
+.slide.active {
+    width: 90%;
+}
+
+.slide img {    
+    width: 100%;
     height: 415px;
     object-fit: cover;
     border-radius : 25px; 
 }
 
 .slide-container {
+    margin-top: 30px;
+    width: 100%;
     height: 415px;
 }
 
-button {
-    background: none;
-    border : none
-}
-
-.back {
-    position: relative;
-    top :250px;
-    left: 20px;
-}
-
-.next {
-    position: relative;
+.button-container {
+    position : absolute ;
     top : 250px;
-    left: 1100px;
+    width: 88%;
+}
+
+.back,
+.next {
+  background: transparent;
+  border: none;
+  cursor: pointer;
 }
