--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,12 +9,8 @@ body {
 
 }
 
-/* #root {
-  width: 89.2%;
-} */
-
 .min-height {
-  min-height: 760px;
+  min-height: 800px;
 }
 
 .widthFull {
